# sockets-and-pipes-by-cmj

./: README  flake.nix
book/: Book.hs  book.cabal  hello-world.hs
